Fix window updates on wayland

This refactors all (wrongly) used KXmlGuiWindow objects to be just
QWidgets. This avoids wrong calls to winid() which leads to severe
window render update misses.

BUG: 468591